Corrections to W5 Color Contrast changed

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,12 +1,15 @@
 :root {
-    --primary-color: #1A5276;
-    /* Deep blue */
-    --secondary-color: #186638;
-    /* Green */
-    --accent1-color: #E67E22;
-    /* Orange */
-    --base-color: #F4F6F7;
+    --primary-color: #011936;
+    /* Prussian blue */
+    --secondary-color: #465362;
+    /* Charcoal */
+    --accent1-color: #F9DC5C;
+    /* Yellow */
+    --base-color: #F4FFFD;
     /* White*/
+    --accent2-color: #ED254E;
+    /* Watermelon */
+
     --heading-font: 'Bebas Neue', sans-serif;
     --body-font: 'Inter', sans-serif;
 }
@@ -19,7 +22,7 @@
 
 body {
     font-family: var(--body-font);
-    color: var(--secondary-color);
+    color: var(--primary-color);
     background-color: var(--base-color);
 }
 
@@ -59,7 +62,7 @@ article {
     height: auto;
 }
 
-h1 {
+.hero h1 {
     position: absolute;
     top: 20px;
     width: 100%;
@@ -74,8 +77,8 @@ h1 {
 .hero article {
     position: absolute;
     top: 250px;
-    background-color: rgba(230, 126, 34, 0.8);
-    color: black;
+    background-color: var(--accent1-color);
+    color: var(--primary-color);
     border-radius: 10px;
     padding: 2px;
 }
@@ -91,7 +94,7 @@ h1 {
 section h2 {
     background-color: var(--accent1-color);
     text-align: center;
-    color: white;
+    color: var(--primary-color);
 }
 
 .socialmedia img {
@@ -120,10 +123,10 @@ nav {
 
 nav a {
     text-decoration: none;
-    border: 1px solid black;
+    border: 1px solid var(--accent1-color);
     border-radius: 0.3rem;
     padding: 0.5rem;
-    color: white;
+    color: var(--base-color);
 }
 
 section .content {
@@ -180,10 +183,10 @@ form {
     width: 100%;
     margin: 0 auto;
     padding: 1rem;
-    border: 1px solid black;
+    border: 1px solid var(--secondary-color);
     border-radius: 0.5rem;
     box-sizing: border-box;
-    background: rgb(228, 224, 224);
+    background: var(--base-color);
 
     /* Grid */
     display: grid;
@@ -200,7 +203,7 @@ fieldset {
 
 legend {
     padding: 0.5rem;
-    color: navy;
+    color: var(--primary-color);
     font-size: 1.3em;
 }
 
@@ -220,7 +223,7 @@ button {
 button:hover,
 button:focus {
     background: #000080cc;
-    color: white;
+    color: var(--base-color);
 }
 
 label {
@@ -244,6 +247,7 @@ input[type="checkbox"] {
 section .employee {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    text-align: center;
 }
 
 .employee img {
